changes to global scss, bio panel styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,16 @@
+// colors
+
 $text: #827C78;
 
 $off-white: #FBFBFA;
 $dark-off-white: #F4F2F0;
 $light-gray: #F3F2F1;
+
+// body padding
+$padding: 1rem;
+
+// breakpoints
+
+$bp-small: 576px;
+$bp-medium: 768px;
+$bp-large: 992px;
