--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,12 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300;400&display=swap');
 
 h1,
 h2,
 h3 {
-  font-family: 'Italiana', serif;
+  font-family: 'Playfair Display', serif;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   line-height: 20px;
+  letter-spacing: .5px;
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 2.8rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
