--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,7 @@
 
 body {
   background-color: $off-white;
+  padding: 0 $padding;
 
   ::selection {
     background-color: $text;
@@ -11,20 +12,42 @@ body {
   }
 }
 
+img {
+  max-width: 100%;
+}
+
 .header {
   background-color: $light-gray;
+  opacity: 0.99;
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  margin: 0 -$padding;
+  top: 0;
+  padding: 0 1rem;
+  height: 60px;
+  align-items: center;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.02),
+    0 2px 2px rgba(0,0,0,0.02),
+    0 4px 4px rgba(0,0,0,0.02),
+    0 8px 8px rgba(0,0,0,0.02),
+    0 16px 16px rgba(0,0,0,0.02);
+  z-index: 2;
 
   ul {
     display: flex;
 
     li {
-      margin-right: 1rem;
+      // margin-right: 1rem;
     }
   }
 }
 
-img {
-  width: 100vw;
+.intro {
+  margin: 85px 0 50px;
+}
+
+.bw-image {
+  filter: grayscale(100%);
+  transition: 0.2s;
 }
