--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,14 @@
+// globals
 @import "_reset.scss";
 @import "_typography.scss";
 @import "_variables.scss";
+
+// components
+@import "../components/navbar/index.scss";
+@import "../components/about/index.scss";
+@import "../components/skills/index.scss";
+@import "../components/projects/index.scss";
+@import "../components/contact/index.scss";
 
 body {
   background-color: $off-white;
@@ -10,44 +18,4 @@ body {
     background-color: $text;
     color: white;
   }
-}
-
-img {
-  max-width: 100%;
-}
-
-.header {
-  background-color: $light-gray;
-  opacity: 0.99;
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
-  margin: 0 -$padding;
-  top: 0;
-  padding: 0 1rem;
-  height: 60px;
-  align-items: center;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.02),
-    0 2px 2px rgba(0,0,0,0.02),
-    0 4px 4px rgba(0,0,0,0.02),
-    0 8px 8px rgba(0,0,0,0.02),
-    0 16px 16px rgba(0,0,0,0.02);
-  z-index: 2;
-
-  ul {
-    display: flex;
-
-    li {
-      // margin-right: 1rem;
-    }
-  }
-}
-
-.intro {
-  margin: 85px 0 50px;
-}
-
-.bw-image {
-  filter: grayscale(100%);
-  transition: 0.2s;
 }
