added some about me details

--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -47,6 +47,10 @@ $spacing: 120px;
     font-size: 1.5rem;
     line-height: 2rem;
     margin-top: $spacing;
+
+    a {
+      text-decoration: underline;
+    }
   }
 }
 
