--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -18,7 +18,6 @@ $spacing: 120px;
   }
 
   &__info {
-    display: flex;
     margin-top: 1rem;
     justify-content: space-evenly;
 
@@ -37,7 +36,7 @@ $spacing: 120px;
         display: block;
         height: 2px;
         width: 100%;
-        background-color: $text;
+        background-color: $brown;
         margin-bottom: 12px;
       }
     }
@@ -51,18 +50,5 @@ $spacing: 120px;
     a {
       text-decoration: underline;
     }
-  }
-}
-
-.fa-sun {
-  animation: spin infinite 30s linear;
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
