--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -9,7 +9,7 @@
   display: flex;
   height: 60px;
   justify-content: space-between;
-  margin: 0 -$padding;
+  margin: 0 -1rem;
   opacity: 0.99;
   padding: 0 1rem;
   position: sticky;
