--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,26 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300;400&display=swap');
+@import url('https://rsms.me/inter/inter.css');
 
-h1,
-h2 {
-  font-family: 'Playfair Display', serif;
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: 'Inter var', sans-serif;
+  }
+}
+
+html {
+  font-family: 'Inter', sans-serif;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  line-height: 20px;
-  letter-spacing: .5px;
-  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: -0.014em;
+  line-height: 25px;
 }
 
 h1 {
-  font-size: 2rem;
-  line-height: 2.8rem;
+  font-size: 40px;
+  letter-spacing: -0.022em;
+  line-height: 50px;
 }
 
 h2 {
-  font-size: 1.8rem;
-  line-height: 2.2rem;
-  margin-bottom: 3rem;
+  font-size: 30px;
+  letter-spacing: -0.024em;
+  line-height: 42px;
 }
 
 h3 {
