--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 // globals
+@import "_helpers.scss";
 @import "_reset.scss";
 @import "_typography.scss";
 @import "_variables.scss";
@@ -8,10 +9,10 @@
 
 body {
   background-color: $off-white;
-  padding: 0 $padding;
+  padding: 0 1rem;
 
   ::selection {
-    background-color: $text;
+    background-color: $brown;
     color: white;
   }
 }
