--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -26,10 +26,11 @@ h2 {
   font-size: 30px;
   letter-spacing: -0.024em;
   line-height: 42px;
+  margin-bottom: 1rem;
 }
 
 h3 {
-  font-size: 0.9rem;
+  font-size: 20px;
   font-weight: 400;
 }
 
