a bunch of stuff

--- a/src/components/skills/index.scss
+++ b/src/components/skills/index.scss
@@ -1,19 +1,7 @@
 .skills {
-  margin-bottom: $spacing-lg;
+  @include subpanel;
 
-  &__single-skill {
-    margin-bottom: 4rem;
-
-    h3 {
-      margin: 1rem 0;
-    }
-
-    &::before {
-      content: "";
-      display: block;
-      height: 2px;
-      width: 100%;
-      background-color: $brown;
-    }
+  h3 {
+    margin: 1rem 0;
   }
 }
