--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,6 @@
 // globals
 @import "_helpers.scss";
+@import "_mixins.scss";
 @import "_reset.scss";
 @import "_typography.scss";
 @import "_variables.scss";
