--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -3,4 +3,4 @@
 @import "./about/index.scss";
 @import "./skills/index.scss";
 @import "./projects/index.scss";
-@import "./contact/index.scss";
+@import "./footer/index.scss";
