--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -10,11 +10,11 @@
   height: 60px;
   justify-content: space-between;
   margin: 0 -1rem;
-  opacity: 0.99;
+  // opacity: 0.99;
   padding: 0 1rem;
-  position: sticky;
-  top: 0;
-  z-index: 2;
+  // position: sticky;
+  // top: 0;
+  // z-index: 2;
 
   &__ul {
     display: flex;
