--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   margin: 1rem -1rem 0 -1rem;
   opacity: 0.95;
-  padding: 14px 1rem;
+  padding: 1.2rem 1rem;
   position: sticky;
   z-index: 2;
 
