--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -7,16 +7,21 @@
     0 8px 8px rgba(0,0,0,0.02),
     0 16px 16px rgba(0,0,0,0.02);
   display: flex;
-  height: 60px;
   justify-content: space-between;
   margin: 0 -1rem;
-  // opacity: 0.99;
-  padding: 0 1rem;
-  // position: sticky;
-  // top: 0;
-  // z-index: 2;
+  padding: 1rem;
 
-  &__ul {
-    display: flex;
+  &__item {
+    background-color: black;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 8px 14px;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
