--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,6 +1,6 @@
 // component style imports
 
-@import "./navbar/index.scss";
+@import "./header/index.scss";
 @import "./about/index.scss";
 @import "./skills/index.scss";
 @import "./projects/index.scss";
