--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -1,20 +1,12 @@
 // display
 
 .d-none {
-  display: none;
+  display: none !important;
 }
 
-// .d-block {
-//   display: block;
-// }
-
-// .d-inline {
-//   display: inline;
-// }
-
-// .d-inline-block {
-//   display: inline-block;
-// }
+.d-block {
+  display: block;
+}
 
 .d-flex {
   display: flex;
